--- a/_posts/2018-3-7-test.html
+++ b/_posts/2018-3-7-test.html
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:  "Test bloga"
-subtitle: "Podtytuł."
-date:   2018-3-7 15:38: +0100
+subtitle: "Podtytul"
+date:   2018-3-7 15:38:00 +0100
 background: '/img/posts/01.jpg'
 ---
 
