--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,2 @@
 T. Berezowski page
+Repository: <a href="https://github.com/tberezowski/tberezowski.github.io">https://github.com/tberezowski/tberezowski.github.io</a>
