--- a/index.htm
+++ b/index.htm
@@ -1,2 +1,4 @@
 T. Berezowski page
+<body>
 Repository: <a href="https://github.com/tberezowski/tberezowski.github.io">https://github.com/tberezowski/tberezowski.github.io</a>
+</body>
