--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
 <body>
-<p>T. Berezowski page</p>
-<p>Repository: <a href="https://github.com/tberezowski/tberezowski.github.io">https://github.com/tberezowski/tberezowski.github.io</a></p>
+T. Berezowski page<br>
+Repository: <a href="https://github.com/tberezowski/tberezowski.github.io">https://github.com/tberezowski/tberezowski.github.io</a><br>
 </body>
